--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,14 @@
 
 	<!-- <svg class="icon-svg icon-instagram"><use xlink:href="images/sprite.svg#instagram"></use></svg> -->
 
+	<!--<picture>
+		<source media="(min-width: 600px)" type="image/webp" srcset="img/xxx.webp">
+		<source media="(min-width: 600px)" type="image/jpeg" srcset="img/xxx.jpg">
+		<source media="(min-width: 400px)" type="image/webp" srcset="img/xxx2.webp">
+		<source media="(min-width: 400px)" type="image/jpeg" srcset="img/xxx2.jpg">
+		<img src="img/xxx.jpg" alt="">
+	</picture>-->
+
 	<!-- BEGIN layout -->
 	<div class="layout">
 
