--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,7 @@
 
 			<!-- BEGIN content -->
 			<main class="content">
-
+				<a href="#modal">Открыть</a>
 			</main>
 			<!-- END content -->
 
@@ -68,7 +68,7 @@
 
 	<div class="hide">
 
-		<form class="form form__popup zoom-anim-dialog" id="callback">
+		<form class="form form__popup modal" id="modal">
 			<div class="form__success">Спасибо за заявку! <br> Наши менеджеры связужьтся с Вами в ближайшее время.</div>
 			<input type="hidden" name="admin-data">
 			<h3 class="form__title">Заказать звонок</h3>
