--- a/app/index.html
+++ b/app/index.html
@@ -66,27 +66,24 @@
 	<!-- END layout -->
 
 
-	<div class="hide">
+	<form class="form form__popup modal hide" id="modal">
+		<div class="form__success">Спасибо за заявку! <br> Наши менеджеры связужьтся с Вами в ближайшее время.</div>
+		<input type="hidden" name="admin-data">
+		<h3 class="form__title">Заказать звонок</h3>
+		<div class="form__box">
+			<label for="input-name" class="form__label">Ваше имя:</label>
+			<input type="text" class="form__input" id="input-name" name="name" placeholder="Введите Ваше Имя ...">
+		</div>
+		<div class="form__box">
+			<label for="input-phone" class="form__label">Ваш телефон:</label>
+			<input type="text" class="form__input" id="input-phone" name="phone" placeholder="Введите Ваш Телефон ..."
+				   required>
+		</div>
+		<div class="form__send">
+			<button class="btn" type="submit">Отправить</button>
+		</div>
+	</form>
 
-		<form class="form form__popup modal" id="modal">
-			<div class="form__success">Спасибо за заявку! <br> Наши менеджеры связужьтся с Вами в ближайшее время.</div>
-			<input type="hidden" name="admin-data">
-			<h3 class="form__title">Заказать звонок</h3>
-			<div class="form__box">
-				<label for="input-name" class="form__label">Ваше имя:</label>
-				<input type="text" class="form__input" id="input-name" name="name" placeholder="Введите Ваше Имя ...">
-			</div>
-			<div class="form__box">
-				<label for="input-phone" class="form__label">Ваш телефон:</label>
-				<input type="text" class="form__input" id="input-phone" name="phone" placeholder="Введите Ваш Телефон ..."
-					   required>
-			</div>
-			<div class="form__send">
-				<button class="btn" type="submit">Отправить</button>
-			</div>
-		</form>
-
-	</div>
 
 	<script src="js/scripts.min.js"></script>
 </body>
