--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,7 @@
 
 	<meta name="theme-color" content="#000000">
 	<meta name="apple-mobile-web-app-status-bar-style" content="#000000">
-	
+
 	<link rel="stylesheet" href="css/styles.min.css">
 </head>
 
@@ -69,7 +69,7 @@
 	<div class="hide">
 
 		<form class="form form__popup zoom-anim-dialog" id="callback">
-			<div class="form__success">Спасибо за заявку! <br> Наши менеджеры связужьтся с Вами в ближайшее время.</div>
+			<div class="form__success">Спасибо за заявку! <br> Наши менеджеры свяжуться с Вами в ближайшее время.</div>
 			<input type="hidden" name="admin-data">
 			<h3 class="form__title">Заказать звонок</h3>
 			<div class="form__box">
